[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/content/teams_panel.gd" id="1"]

[node name="TeamsPanel" type="PanelContainer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Engineering Teams"

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TeamCountLabel" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Teams: 1"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HireButton" type="Button" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+ Hire"

[node name="SalaryLabel" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "$150K/mo"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TeamsContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
